exploring action bugs squashed; message to player

--- a/src/App.css
+++ b/src/App.css
@@ -459,3 +459,23 @@ div.incomeTrackHeader img.icon-in-text{
 .display-none {
     display: none;
 }
+
+.territory-tiles {
+    display: flex;
+    align-items: center;
+    height: 80px;
+    margin-left: 20px;
+}
+
+.territory-tiles img{
+    height: 80px;
+    margin: 3px;
+}
+
+.territory-tiles img.choosing{
+    cursor: pointer;
+}
+
+.territory-tiles .smallMessage{
+    margin-left: 20px;
+}
